languages/io-automaton-fe/src/test/resources/valid/qualification/ForSimpleQualificationTest.ioautomaton
package valid.qualification;

import valid.qualification.Test;
import java.util.List;

automaton ForSimpleQualificationTest{
	
	//Primitive
	input int i;
	
	//Object
	input Integer a;
	
	//Complex
	input Test b;
	
	//Java
	input List<Integer> c;
	
	//Array
	input int[] d;
	
	output int o;
	
	state S;
	initial S;	

}