languages/io-automaton-fe/src/test/resources/invalid/OutputInExpression.ioautomaton
package invalid;

automaton OutputInExpression{
    input int i;
    
    variable int v;
    
    output int o;
    
    state S;
    initial S;
    
    S [i == v + i / o] {v == (o+1)*o} / {o = (v*i)+o};

}